# bench-cli

./: .gitignore  README.md  SPEC.md  install.sh  pyproject.toml  taste.md
.github/workflows/: integration.yml  marketplace-app-check.yml  release-admin.yml  unit-tests.yml
admin/backend/: app.py  cron_manager.py  server.py  wsgi.py
admin/frontend/: components.d.ts
bench2/: cli.py
bench2/commands/: kill_orphaned.py
bench2/config/: app_config.py  bench_config.py  letsencrypt_config.py  mariadb_config.py  nginx_config.py  redis_config.py  site_config.py  worker_config.py
bench2/tasks/: models.py  task_reader.py  task_runner.py  wrapper.py
bench_cli/: admin_url.py  cli.py  loader.py  platform.py  registry.py  utils.py
bench_cli/admin/: server.py
bench_cli/commands/: admin.py  base.py  build.py  drop_site.py  frappe_cmd.py  get_app.py  init.py  list_apps.py  list_site_apps.py  new.py  new_site.py  remove_app.py  restart.py  (+10 more)
docs/: admin.md  architecture.md  commands.md  config.md  production.md  volume.md
registry/: apps.json
scripts/: check_marketplace_apps.py  diff_marketplace_apps.py  run_marketplace_app_check.py
specs/: admin.md  architecture.md  commands.md  config.md  production.md
tests/: test_admin_app.py  test_admin_url.py  test_admin_watchdog.py  test_bench_toml_builder.py  test_cli.py  test_commands.py  test_config.py  test_core.py  test_gunicorn.py  test_managers_extra.py  test_mariadb_manager.py  test_nginx_config.py  test_platform.py  test_process_reader.py  test_setup_production.py  test_tasks.py  test_utils.py  test_volume_discovery.py
(+93 files in other folders)
