[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bench-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bench = "bench_cli.cli:main"

[project.optional-dependencies]
admin = ["flask>=3.0", "psutil>=5.9", "pymysql>=1.1", "gunicorn>=21.2"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 200

[tool.ruff.format]
line-ending = "auto"

[tool.setuptools.package-data]
"admin.backend" = [
  "static/dist/**/*",
  "static/dist/index.html",
]
